# src/chat/dtos/message-create.input.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class MessageCreateInputDto {
+  @IsNotEmpty()
+  @IsString()
+  content: string;
+}
